@@ -1193,7 +1193,7 @@ _EOF_
 		elif [[ $INPUT_DEVICE_VALUE == 'enable' ]]; then
 
 			# - Install prereqs
-			local pre_req_packages='crda firmware-atheros firmware-brcm80211 iw rfkill wireless-tools wpasupplicant'
+			local pre_req_packages='crda firmware-atheros firmware-brcm80211 firmware-iwlwifi iw rfkill wireless-tools wpasupplicant'
 			if (( $G_DISTRO == 3 )); then
 
 				pre_req_packages+=' firmware-ralink'
